--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,21 +10,23 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: 3.9
 
     - name: Install Language Pack
       run: sudo apt-get install -y language-pack-it
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
