Install language pack only on Ubuntu.

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -26,6 +26,7 @@ jobs:
         python-version: 3.9
 
     - name: Install Language Pack
+      if: matrix.os == 'ubuntu-latest'
       run: sudo apt-get install -y language-pack-it
 
     - name: Install dependencies
